# StylistAI

./: .gitignore  LICENSE  README.md  README_StyleSnap_MVP.md  check_models.py  docker-compose.yml  package.json
app/: globals.css  layout.tsx  page.tsx
backend/: Dockerfile  alembic.ini  backend_tree.txt  docker-compose.yml  files_list.txt  models_check.txt  pyproject.toml  requirements.txt  structure.txt  test_wb.py
backend/app/: main.py
backend/app/api/v1/: ai.py  auth.py  wardrobe.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  ai_analysis.py  clothing.py  init.py  user.py
backend/app/schemas/: __init__.py  ai.py  clothing.py  token.py  user.py
backend/app/services/: asos_provider.py  auth_service.py  clothing_service.py  gemini_service.py  hm_provider.py  marketplace_service.py  pricescout_provider.py  serper_provider.py  user_service.py
backend/migrations/: env.py
backend/migrations/versions/: 0a693b2e8a42_create_users_table.py  61c407ae6880_add_hashed_password_to_users_table.py
backend/src/stylist_ai/: main.py
backend/src/stylist_ai/api/: deps.py  router.py
backend/src/stylist_ai/api/endpoints/: users.py
backend/src/stylist_ai/core/: config.py  security.py
backend/src/stylist_ai/crud/: user.py
backend/src/stylist_ai/db/: base.py  session.py
backend/src/stylist_ai/models/: user.py
backend/src/stylist_ai/schemas/: __init__.py  user.py
backend/tests/: api_plan.txt  test_smoke.py
components/: about-modal.tsx  add-item-modal.tsx  animated-background.tsx  blob-decoration.tsx  (+21 more)
(+61 files in other folders)
